[package]
name = "vmod_unleash"
version = "0.1.0-1"
edition = "2021"
repository = "https://github.com/teqm/libvmod-unleash"

[build-dependencies]
varnish = { git = "https://github.com/gquintard/varnish-rs", branch = "6.0" }

[dependencies]
base64 = "0.21.0"
tokio = { version = "1.27.0", features = ["full"] }
unleash-client = { git = "https://github.com/teqm/unleash-client-rs", branch = "master" }
varnish = { git = "https://github.com/gquintard/varnish-rs", branch = "6.0" }
varnish-sys = { git = "https://github.com/gquintard/varnish-rs", branch = "6.0" }
serde = "1.0.160"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
test-case = "3.1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.deb]
maintainer = "teqm <szybowskitomasz@gmail.com>"
copyright = "2023, teqm <szybowskitomasz@gmail.com>"
assets = [
    ["target/release/libvmod_unleash.so", "usr/lib/varnish/vmods/", "644"]
]
